Refactored and split into separate files for further extensibility.

--- a/sorted_array/sorted_array/sorted_array.vcxproj
+++ b/sorted_array/sorted_array/sorted_array.vcxproj
@@ -19,7 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="sortedarray.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="test_array.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{6E3B29AB-261E-490D-BADC-1F4AF69D37DB}</ProjectGuid>
