--- a/sorted_array/sorted_array/sorted_array.vcxproj
+++ b/sorted_array/sorted_array/sorted_array.vcxproj
@@ -92,6 +92,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <Profile>true</Profile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
