Added test_vector.cpp and content.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ sorted_array/x64/Debug/sorted_array.exe
 *.vsp
 sorted_array/sorted_array/x64/Debug/sorted_array.Build.CppClean.log
 *.suo
+sorted_array/.vs/sorted_array/v14/.suo
+*.suo
+*.suo
